--- a/project-web-app/package.json
+++ b/project-web-app/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "ng2-charts": "^5.0.4",
+    "chart.js": "3.7.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
