--- a/project-web-app/package.json
+++ b/project-web-app/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "ng2-charts": "^5.0.4",
     "chart.js": "3.7.0",
+    "ng2-charts": "^5.0.4",
+    "ngx-cookie-service": "^17.0.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
