--- a/project-web-app/package.json
+++ b/project-web-app/package.json
@@ -25,6 +25,7 @@
     "ngx-cookie-service": "^17.0.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
