--- a/project-web-app/package.json
+++ b/project-web-app/package.json
@@ -24,6 +24,7 @@
     "ng2-charts": "^5.0.4",
     "ngx-cookie-service": "^17.0.1",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
