--- a/project-web-app/package.json
+++ b/project-web-app/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "chart.js": "3.7.0",
     "ng2-charts": "^5.0.4",
+    "ngx-bootstrap": "^12.0.0",
     "ngx-cookie-service": "^17.0.1",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^18.0.0",
